# VesSkel

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
analysis/: HRF_Feature_Analysis.ipynb  HRF_Prediction.ipynb
benchmark/: vesskel_vs_skimage_skeletonization.py
docs/: euler_redundancy.typ  update_04_21.typ  update_05_05.typ
tests/: conftest.py  test_3d_skimage_comparison.py  test_3d_thinning_regression.py  test_thinning_regression.py
tests/features/: features_01_dr.csv  features_01_g.csv  features_01_h.csv  features_02_dr.csv  features_02_g.csv  features_02_h.csv  features_03_dr.csv  features_03_g.csv  features_03_h.csv  features_04_dr.csv  features_04_g.csv  features_04_h.csv  features_05_dr.csv  features_05_g.csv  features_05_h.csv  features_06_dr.csv  features_06_g.csv  features_06_h.csv  features_07_dr.csv  features_07_g.csv  features_07_h.csv  features_08_dr.csv  features_08_g.csv  features_08_h.csv  features_09_dr.csv  features_09_g.csv  features_09_h.csv  features_10_dr.csv  features_10_g.csv  features_10_h.csv  features_11_dr.csv  features_11_g.csv  features_11_h.csv  features_12_dr.csv  features_12_g.csv  features_12_h.csv  features_13_dr.csv  features_13_g.csv  features_13_h.csv  features_14_dr.csv  (+6 more)
tests/skeletons/: skeleton_01_dr.npz  skeleton_01_g.npz  skeleton_01_h.npz  skeleton_02_dr.npz  skeleton_02_g.npz  skeleton_02_h.npz  skeleton_03_dr.npz  skeleton_03_g.npz  skeleton_03_h.npz  skeleton_04_dr.npz  skeleton_04_g.npz  skeleton_04_h.npz  skeleton_05_dr.npz  skeleton_05_g.npz  skeleton_05_h.npz  skeleton_06_dr.npz  skeleton_06_g.npz  skeleton_06_h.npz  skeleton_07_dr.npz  skeleton_07_g.npz  skeleton_07_h.npz  skeleton_08_dr.npz  skeleton_08_g.npz  skeleton_08_h.npz  skeleton_09_dr.npz  skeleton_09_g.npz  skeleton_09_h.npz  skeleton_10_dr.npz  skeleton_10_g.npz  skeleton_10_h.npz  skeleton_11_dr.npz  skeleton_11_g.npz  skeleton_11_h.npz  skeleton_12_dr.npz  skeleton_12_g.npz  skeleton_12_h.npz  skeleton_13_dr.npz  skeleton_13_g.npz  skeleton_13_h.npz  skeleton_14_dr.npz  (+6 more)
vesskel/: __init__.py  _napari.py  features.py  hrf.py  napari.yaml  thin.py  thin_2d.py  thin_3d.py
