[project]
name = "vesskel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numba>=0.65.0",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vesskel*"]

[tool.pytest.ini_options]
addopts = "-n auto"
