[project]
name = "vesskel"
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
version = "1.2.0"
description = "2D and 3D Skeletonization and Graph-based Analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numba>=0.65.0",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "scipy>=1.17.1",
    "skan>=0.13.1",
]

[project.optional-dependencies]
napari = [
    "napari[all]",
    "napari-assistant>=0.6.0",
    "itk>=5.4.6",
    "napari-simpleitk-image-processing>=0.4.9",
    "napari-skimage>=0.6.0",
]

dev = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "pooch>=1.9.0",
    "scikit-image>=0.26.0",
]

notebooks = [
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "scikit-learn>=1.8.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vesskel*"]

[tool.setuptools.package-data]
vesskel = ["napari.yaml"]

[project.entry-points."napari.manifest"]
vesskel = "vesskel:napari.yaml"

[tool.pytest.ini_options]
addopts = "-n auto"
